# leaf

./: Cargo.toml  README.md  build.rs  install.ps1  install.sh  leaf  packages.json
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
src/: config.rs  installer.rs  main.rs  package.rs  package_manager.rs  utils.rs
