[package]
name = "leaf"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "leaf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
zip = "0.6"
dirs = "5.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
