[package]
name = "leaf"
version = "1.0.3-beta"
edition = "2024"
build = "build.rs"

[[bin]]
name = "leaf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
dirs = "5.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "json"], default-features = false }

# Profile for optimized static builds
[profile.release]
lto = true              # Link Time Optimization
codegen-units = 1       # Better optimization
panic = "abort"         # Smaller binaries
strip = true           # Remove debug symbols
opt-level = 3          # Maximum optimization

# Static linking configuration for musl targets
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
